yacc_ragel/y.output

state 0
	$accept: .start $end 

	T_NULL  shift 7
	T_FALSE  shift 8
	T_INT  shift 9
	T_FLOAT  shift 10
	T_STRING  shift 11
	T_BOOL  shift 12
	T_NAME  shift 4
	'?'  shift 6
	'('  shift 5
	.  error

	type_expr  goto 2
	primitive_type  goto 3
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  type_expr.    (1)
	type_expr:  type_expr.'[' ']' 
	type_expr:  type_expr.'?' 
	type_expr:  type_expr.'&' type_expr 
	type_expr:  type_expr.'|' type_expr 

	'|'  shift 16
	'&'  shift 15
	'['  shift 13
	'?'  shift 14
	.  reduce 1 (src line 38)


state 3
	type_expr:  primitive_type.    (2)

	.  reduce 2 (src line 42)


state 4
	type_expr:  T_NAME.    (3)

	.  reduce 3 (src line 44)


state 5
	type_expr:  '('.type_expr ')' 

	T_NULL  shift 7
	T_FALSE  shift 8
	T_INT  shift 9
	T_FLOAT  shift 10
	T_STRING  shift 11
	T_BOOL  shift 12
	T_NAME  shift 4
	'?'  shift 6
	'('  shift 5
	.  error

	type_expr  goto 17
	primitive_type  goto 3

state 6
	type_expr:  '?'.type_expr 

	T_NULL  shift 7
	T_FALSE  shift 8
	T_INT  shift 9
	T_FLOAT  shift 10
	T_STRING  shift 11
	T_BOOL  shift 12
	T_NAME  shift 4
	'?'  shift 6
	'('  shift 5
	.  error

	type_expr  goto 18
	primitive_type  goto 3

state 7
	primitive_type:  T_NULL.    (10)

	.  reduce 10 (src line 53)


state 8
	primitive_type:  T_FALSE.    (11)

	.  reduce 11 (src line 55)


state 9
	primitive_type:  T_INT.    (12)

	.  reduce 12 (src line 56)


state 10
	primitive_type:  T_FLOAT.    (13)

	.  reduce 13 (src line 57)


state 11
	primitive_type:  T_STRING.    (14)

	.  reduce 14 (src line 58)


state 12
	primitive_type:  T_BOOL.    (15)

	.  reduce 15 (src line 59)


state 13
	type_expr:  type_expr '['.']' 

	']'  shift 19
	.  error


state 14
	type_expr:  type_expr '?'.    (7)

	.  reduce 7 (src line 48)


state 15
	type_expr:  type_expr '&'.type_expr 

	T_NULL  shift 7
	T_FALSE  shift 8
	T_INT  shift 9
	T_FLOAT  shift 10
	T_STRING  shift 11
	T_BOOL  shift 12
	T_NAME  shift 4
	'?'  shift 6
	'('  shift 5
	.  error

	type_expr  goto 20
	primitive_type  goto 3

state 16
	type_expr:  type_expr '|'.type_expr 

	T_NULL  shift 7
	T_FALSE  shift 8
	T_INT  shift 9
	T_FLOAT  shift 10
	T_STRING  shift 11
	T_BOOL  shift 12
	T_NAME  shift 4
	'?'  shift 6
	'('  shift 5
	.  error

	type_expr  goto 21
	primitive_type  goto 3

state 17
	type_expr:  '(' type_expr.')' 
	type_expr:  type_expr.'[' ']' 
	type_expr:  type_expr.'?' 
	type_expr:  type_expr.'&' type_expr 
	type_expr:  type_expr.'|' type_expr 

	'|'  shift 16
	'&'  shift 15
	'['  shift 13
	'?'  shift 14
	')'  shift 22
	.  error


state 18
	type_expr:  '?' type_expr.    (5)
	type_expr:  type_expr.'[' ']' 
	type_expr:  type_expr.'?' 
	type_expr:  type_expr.'&' type_expr 
	type_expr:  type_expr.'|' type_expr 

	.  reduce 5 (src line 46)


state 19
	type_expr:  type_expr '[' ']'.    (6)

	.  reduce 6 (src line 47)


state 20
	type_expr:  type_expr.'[' ']' 
	type_expr:  type_expr.'?' 
	type_expr:  type_expr.'&' type_expr 
	type_expr:  type_expr '&' type_expr.    (8)
	type_expr:  type_expr.'|' type_expr 

	'&'  shift 15
	'['  shift 13
	'?'  shift 14
	.  reduce 8 (src line 49)


state 21
	type_expr:  type_expr.'[' ']' 
	type_expr:  type_expr.'?' 
	type_expr:  type_expr.'&' type_expr 
	type_expr:  type_expr.'|' type_expr 
	type_expr:  type_expr '|' type_expr.    (9)

	'|'  shift 16
	'&'  shift 15
	'['  shift 13
	'?'  shift 14
	.  reduce 9 (src line 50)


state 22
	type_expr:  '(' type_expr ')'.    (4)

	.  reduce 4 (src line 45)


18 terminals, 4 nonterminals
16 grammar rules, 23/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 10/120000
12 extra closures
62 shift entries, 1 exceptions
7 goto entries
4 entries saved by goto default
Optimizer space used: output 37/120000
37 table entries, 8 zero
maximum spread: 18, maximum offset: 18
